<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrossGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_connect">Start Cross Game</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wifi_p2_pinit">Find Connections</string>
    <string name="title_activity_home_screen">CrossGame</string>
    <string name="wifi_enabled">Wifi Enabled</string>
    <string name="wifi_disabled">Wifi Disabled</string>
    <string name="device_discovery">Discover Initiated</string>
    <string name="device_discovery_fail">Discover Initiation Failed</string>
    <string name="button_input">New to Cross Game?</string>
    <string name="title_activity_info_input">infoInput</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="title_activity_main">AddressBook</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="orientation">Looking for</string>
    <string name="phonenumber">Phone #</string>
    <string name="tagline">Tagline</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="spinner_prompt">Select Gender</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_start_connect">StartConnect</string>
    <string name="radio_male1">male</string>
    <string name="radio_female1">female</string>
    <string name="radio_male2">male</string>
    <string name="radio_female2">female</string>
    <string name="title_activity_connected_list">Connection List</string>
    <string name="title_activity_display_user">Profile</string>
    <string name="connected_user_list">See Your Connections\' Profiles</string>
    <string name="logo">logo</string>
    <string name="logo_instart">logo2</string>

</resources>
