<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.christopherlim.crossgame.HomeScreen"
    android:background="#ffd44141">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"
        android:onClick="startConnect2"
        android:id="@+id/button"
        android:layout_toStartOf="@+id/button2"
        android:singleLine="false"
        android:background="#ffdffeff"
        android:typeface="normal"
        android:longClickable="false"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button2"
        android:layout_marginRight="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_input"
        android:onClick="startInput"
        android:id="@+id/button2"
        android:singleLine="false"
        android:typeface="normal"
        android:background="#ffdffeff"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/connected_user_list"
        android:onClick="startConnectedList2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button4"
        android:background="#ffdffeff" />

    <ImageView
        android:layout_width="370dp"
        android:layout_height="350dp"
        android:id="@+id/imageView2"
        android:background="@drawable/high_resolution2"
        android:contentDescription="@string/logo"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
