<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.christopherlim.crossgame.StartConnect"
    android:background="#ffd44141">

    <Button
        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_connect"
         android:layout_gravity="top"
         android:onClick="startConnect"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button2"
        android:background="#ffdffeff" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/connected_user_list"
        android:onClick="startConnectedList"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button"
        android:background="#ffddfdff" />

    <ImageView
        android:layout_width="370dp"
        android:layout_height="350dp"
        android:id="@+id/imageView"
        android:background="@drawable/high_resolution2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_instart" />

</RelativeLayout>
