<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayUser" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:id="@+id/editTextLastName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextFirstName2"
            android:layout_alignLeft="@+id/editTextPhoneNumber2"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            >

        </TextView>

        <TextView
            android:id="@+id/editTextFirstName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextLastName2"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            >
        </TextView>

        <TextView
            android:id="@+id/textLastName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextLastName2"
            android:layout_alignLeft="@+id/textOrientation2"
            android:text="@string/lastname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textFirstName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextFirstName2"
            android:layout_alignLeft="@+id/textOrientation2"
            android:text="@string/firstname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textOrientation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextOrientation2"
            android:layout_alignParentLeft="true"

            android:text="@string/orientation"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textAge2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextAge2"
            android:layout_alignLeft="@+id/textLastName2"
            android:text="@string/age"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textGender2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextPhoneNumber2"
            android:layout_alignBottom="@+id/editTextGender2"
            android:layout_alignLeft="@+id/textAge2"
            android:text="@string/gender"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/editTextGender2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextLastName2"
            android:layout_below="@+id/editTextAge2"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/editTextAge2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextGender2"
            android:layout_below="@+id/editTextLastName2"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/editTextOrientation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextGender2"
            android:layout_below="@+id/editTextGender2"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/editTextPhoneNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextOrientation2"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="100dp"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/editTextTagLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextPhoneNumber2"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="100dp"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/textPhoneNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextPhoneNumber2"
            android:layout_alignParentLeft="true"

            android:text="@string/phonenumber"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/textTagLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextTagLine2"
            android:layout_alignParentLeft="true"
            android:text="@string/tagline"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
</ScrollView>
